# integra-markets

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .railwayignore  .vercelignore  A16Z_DEMO_GUIDE.md  AI_CHAT_IMPROVEMENT_PLAN.md  ANDROID_SUBMISSION_GUIDE.md  App.js  App.web.js  App.web.new.js  BACKEND_DEPLOYMENT.md  BACKEND_STATUS.md  BACKEND_TEST_README.md  BUILD_SUBMISSION_SUMMARY.md  CLAUDE.md  CRASH_SOLUTIONS_SUMMARY.md  DEPLOYMENT_IMPROVEMENTS.md  DEPLOYMENT_STRATEGY.md  Dockerfile  Dockerfile.test  Dockerfile.web  FINAL_BUILD_CHECKLIST.md  MOCK_DATA_REPLACEMENT_PLAN.md  MainApp.js  MainApp.web.js  NOTIFICATION_ASSETS_UPDATE.md  PROJECT_RULES.md  README.md  SERVERLESS_SENTIMENT.md  SUPABASE_OAUTH_SETUP.md  SafeAppWrapper.js  ShinyText.css  ShinyText.tsx  TESTFLIGHT_SUBMISSION_GUIDE.md  TestApp.js  V0_INTEGRATION_GUIDE.md  ai-analysis-overlay.tsx  android_cli_submission.sh  (+83 more)
.vercel/: project.json
__tests__/: TEST_SUMMARY_REPORT.md  TestSprite.js  backend-integration.test.js  basic.test.js  database-social-schema.test.js  notifications-alerts.test.js  realtime-functionality.test.js  run-onboarding-tests.js  run-testsprite.js  testsprite-runner.js  testsprite.config.js  user-onboarding.test.js
android/: settings.gradle
app/: App.desktop-integration.js  App.js  App.simple.js  App.test.js  FixedApp.js  SafeAppWrapper.js  app.json  debug_notifications.js  integra.db  main.py  package.json  page.tsx  requirements-light.txt  requirements.txt  tsconfig.json
app-store-assets/: README.md
assets/: integra-branding.json
backend/: .gitignore  Dockerfile  SOURCE_ATTRIBUTION_README.md  alpha_vantage_client.py  article_summarizer.py  content_extractor.py  data_sources.py  db.py  groq_ai_service.py  init_db.py  init_db_manual.py  main.py  main_enhanced.py  main_integrated.py  main_production.py  main_simple_nlp.py  market_data_service.py  news_manager.py  railway.json  requirements-light.txt  requirements.txt  response_processor.py  setup.py  setup_nltk.py  (+8 more)
(+655 files in other folders)
