[project]
name = "integra"
version = "0.1.0"
description = "Integra Markets - Commodity sentiment analysis and news aggregation platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    # Authentication and security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # HTTP and web scraping
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    # News and RSS parsing
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Sentiment analysis - NLTK and VADER
    "nltk>=3.8.1",
    "vaderSentiment>=3.3.2",
    # Hugging Face transformers for FinBERT
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "tokenizers>=0.14.0",
    # LangChain for document processing and summarization
    "langchain>=0.0.340",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    # Environment and configuration
    "python-dotenv>=1.0.0",
    # Database (optional for future use)
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0", # For testing FastAPI
    "spacy>=3.8.7",
    "redis>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
